custom all datalist option

--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
       
       
       <div class="form-outline row">
-        <div class="col-2 my-3">
-        <input type="search" class="form-control p-3 fs-3" id="search-ingredients" list="datalistOptions-ingredients" placeholder="Ingredient" aria-label="recherche ingredient">
+        <div class="col-2 m-3 p-0" id="datalist-ingredients">
+        <input type="search" class="form-control fs-3" id="search-ingredients" list="datalist-ingredients-options" placeholder="Ingredient" aria-label="recherche ingredient">
+        <ul class="p-2" id="datalist-ingredients-options"></ul>
        </div>
-       <div class="col-2 my-3">
-        <input type="search" class="form-control p-3 fs-3" id="search-appliance" list="datalistOptions-appliance" placeholder="Appareil" aria-label="recherche appareil">
+       <div class="col-2 m-3 p-0" id="datalist-appliance">
+        <input type="search" class="form-control fs-3" id="search-appliance" list="datalist-appliance-options" placeholder="Appareil" aria-label="recherche appareil">
+        <ul class="p-2" id="datalist-appliance-options"></ul>
        </div>
-       <div class="col-2 my-3">
-        <input type="search" class="form-control p-3 fs-3" id="search-ustensils" list="datalistOptions-ustensils" placeholder="Ustensiles" aria-label="recherche ustensiles">
+       <div class="col-2 m-3 p-0" id="datalist-ustensils">
+        <input type="search" class="form-control fs-3" id="search-ustensils" list="datalist-ustensils-options" placeholder="Ustensiles" aria-label="recherche ustensiles">
+        <ul class="p-2" id="datalist-ustensils-options"></ul>
        </div>
       </div>
 
@@ -52,6 +55,13 @@
     <div class="container" >
       <div class="row justify-content-between" id="recette-list"></div>
     </div>
+
+
+    <!--<div id="datalist">
+      <input id="datalist-input" type="text" placeholder="请选择">
+      <i id="datalist-icon" class="icon iconfont icon-arrow"></i>
+      <ul id="datalist-ul"></ul>
+  </div>-->
     <!--<script src="../js/recipes.js"></script>--> 
     <script type="module" src="../js/recettes.js"></script>
   </body>
