--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
     <div class="container">
-      <form>
+      <form action="" id="search-bar__button" >
         <div class="input-group">
           <input
             type="search"
@@ -31,7 +31,7 @@
             aria-describedby="barre de recherche"
             placeholder="rechercher une recette"
           />
-          <button type="submit" class="btn bg-light border-0 fs-3">
+          <button  type="submit" class="btn bg-light border-0 fs-3">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
@@ -88,6 +88,6 @@
       <ul id="datalist-ul"></ul>
   </div>-->
     <!--<script src="../js/recipes.js"></script>-->
-    <script type="module" src="../js/recettes.js"></script>
+    <script type="module" src="./Js/recettes.js"></script>
   </body>
 </html>
