--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       </div>
     </div>
     <div class="container">
+      <div class="row justify-content-between" id="no-recette"></div>
       <div class="row justify-content-between" id="recette-list"></div>
     </div>
 
